[package]
name = "lindel"
version = "0.1.0"
authors = ["froderick <jnikolaides@toolsonair.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package.metadata.docs.rs]
all-features = true

[dependencies]
num = {version = "*"}
num-traits = {version = "*"}
nalgebra = {version = "*", optional = true}

[dev-dependencies]
rand = "*"

[dependencies.morton-encoding]
version = "^2"
default-features = false

[features]
default = ["std"]
std = []
nalg = ["nalgebra"]
