[package]
name = "lindel"
version = "0.1.2"
authors = ["froderick <velona@ahiru.eu>"]
edition = "2018"
description = "A crate for Hilbert and Morton encoding and decoding; in a word, linearising and delinearising."
license = "MIT OR Apache-2.0"
readme = "README.md"
keywords = ["Z-order", "fractal", "curve", "Morton", "Hilbert"]
categories = ["algorithms"]
homepage = "https://github.com/DoubleHyphen/lindel"
documentation = "https://docs.rs/lindel/"
repository = "https://github.com/DoubleHyphen/lindel"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package.metadata.docs.rs]
all-features = true

[dependencies]
num = "0.4"
num-traits = "0.2"
nalgebra = {version = "0.25", optional = true}

[dev-dependencies]
rand = "0.8"
criterion = "0.4"

[dependencies.morton-encoding]
version = "^2"
default-features = false

[features]
default = ["std"]
std = []
nalg = ["nalgebra"]


[[bench]]
name = "metrics"
harness = false